# https-github-dev.cs.illinois.edu-cs225-fa20-zhanyil2

lab_debug/: sketchify.cpp
lab_intro/: CMakeLists.txt  lab_intro.cpp
lab_intro/cs225/: HSLAPixel.cpp  HSLAPixel.h
mp_intro/: Makefile  intro.cpp
mp_intro/cs225/: HSLAPixel.cpp  HSLAPixel.h
